--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
-
-h1{
-    color: brown;
-}
-p{
- font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
- color: darkslategrey;
-}
-h1{
-    text-align: center;
+td{
+    background-color:cadetblue;
+} 
+b{
+    color:darkblue;
 }
